# youtubeopen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy.yml
crates/core/: Cargo.toml
crates/core/src/: traits.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/merger-wasm/: Cargo.toml
crates/merger-wasm/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: routes.rs
crates/server/src/backends/: mod.rs  purerust.rs  ytdlp.rs
crates/server/src/core/: mod.rs  types.rs
frontend-dist/: index.html  manifest.json  robots.txt  sitemap.xml
